# kata-cloud-agents

./: .gitignore  .prettierignore  AGENTS.md  biome.json  eslint.config.mjs  kata-cloud-agents.code-workspace  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vitest.config.ts  vitest.e2e.config.ts
.githooks/: pre-push
.github/workflows/: ci.yml
agents/coordinator/: package.json  tsconfig.json  vitest.config.ts
agents/specialist/: package.json
agents/verifier/: package.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/workspaces/: commands.rs  git_github.rs  git_local.rs  mod.rs  model.rs  store.rs
apps/mobile/: index.html  package.json
apps/web/: index.html  package.json
containers/: README.md  docker-compose.yml
docs/: M0-dependency-graph.mermaid  M1-dependency-graph.mermaid  PROJECT_PLAN.md  background-agents.md
docs/design/: AGENTS.md
docs/plans/: 2026-02-26-kat-104-monorepo-bootstrap.md  2026-02-26-kat-106-postgresql-schema-drizzle-migrations.md  2026-02-26-kat-109-design.md  2026-02-26-kat-109-websocket-server-for-real-time-updates.md  2026-02-26-kat-110-ci-pipeline.md  2026-02-26-kat-111-kat-114-independence-design.md  2026-02-26-kat-111-spec-engine-implementation.md  (+14 more)
infrastructure/: README.md
scripts/: check-ui-drift.mjs  install-hooks.mjs
tests/e2e/: agent-coordinator.test.ts  (+3 more)
(+97 files in other folders)
