[package]
name = "kata-cloud-agents-desktop"
version = "0.1.0"
description = "Kata Cloud Agents desktop shell"
authors = ["Gannon Hall"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
